--- a/midterm/rocket.html
+++ b/midterm/rocket.html
@@ -11,6 +11,10 @@
 var canvas = document.getElementById("canvas");
 var context = canvas.getContext("2d");
 
+var pic = new Image();
+pic.src = "midterm/pixel-galaxy.gif";
+pic.addEventListener("load", function(){canvas.drawImage(pic, 0, 0)}, false); 
+
 canvas.addEventListener("keydown", keyDown);
 canvas.addEventListener("mousedown", mouseDown);
 //Plane control
